jerry-core/parser/js/new-parser/tests/js/labels-comparison-with-escape-same.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Duplicated label.' at line: 1 col: 33
