jerry-core/parser/js/new-parser/tests/js/labels-comparison-with-escape-same.js
\u006ca\u0062el: \u006cab\u0065l: expr;
